reorganized FirstContest